# fyers_rust

./: .gitignore  Cargo.toml  README.md  build.rs
examples/: auth_and_profile.rs  data_history.rs  data_market_depth.rs  data_option_chain.rs  data_quotes.rs  get_profile.rs  orders.rs  transaction_orders.rs  transaction_positions.rs  transaction_trades.rs  user_funds.rs  user_holdings.rs  user_profile.rs  websocket.rs
examples/helpers/: config.rs
src/: auth.rs  client.rs  dataapi.rs  error.rs  fyers.v1.proto  lib.rs  orders.rs  transaction.rs  user.rs
src/models/: dataapi.rs  market_data.rs  mod.rs  orders.rs  profile.rs  transaction.rs  user.rs  websocket.rs
src/websocket/: general_socket.rs  market_data.rs  mod.rs
