[package]
name = "fyers_rust"
version = "0.1.0"
edition = "2021"
authors = ["autumn"]
repository = "https://github.com/WinterSunset95/fyers_rust"
keywords = ["fyers", "trading", "api", "rust", "sdk", "finance"]
categories = ["api-bindings", "finance"]

[lib]
name = "fyers_rust"
path = "src/lib.rs"

[[example]]
name = "get_profile"
path = "examples/get_profile.rs"
[[example]]
name = "auth_and_profile"
path = "examples/auth_and_profile.rs"
[[example]]
name = "data_history"
path = "examples/data_history.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
dotenvy = "0.15"
tokio-tungstenite = "0.23"
sha2 = "0.10"
log = "0.4"
env_logger = "0.10"
